# paystub-generator

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  sample_data.py
generators/: __init__.py  batch_generator.py  pdf_generator.py
models/: __init__.py  pay_period.py  payroll_calculator.py  paystub.py  profile_io.py  profile_store.py  validator.py
profiles/assignments/: sample_payroll.json
profiles/companies/: northwind_ops_llc.json
profiles/deduction_defaults/: default_employee_deductions.json
profiles/employees/: sample_employee.json
profiles/tax_defaults/: ny_single_biweekly.json
review/: README.md
scripts/: regenerate_pdf_snapshots.py  regenerate_web_snapshots.py
tests/: __init__.py  pdf_snapshot_utils.py  test_payroll_features.py  web_snapshot_utils.py
tests/fixtures/: pdf_visual_snapshots.json  web_visual_snapshots.json
webapp/: __init__.py  app.py  service.py
webapp/static/: app.js  styles.css
webapp/templates/: index.html
